prevent horizontal scroll

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -22,6 +22,7 @@ body {
   background-color: #333;
   color: #ddd;
   line-height: 1.2rem;
+  overflow-x: hidden;
 }
 header {
   background-color: #ffffff05;
